apps/teste-quota/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: teste-quota
  labels:
    kubernetes.io/metadata.name: teste-quota
    backstage.io/kubernetes-id: teste-quota
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
