apps/teste-quota/base/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: teste-quota-strict
  namespace: istioinaction
spec:
  selector:
    matchLabels:
      app: teste-quota
  mtls:
    mode: STRICT
