apps/teste-quota/base/teste-quota-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teste-quota-vs
  namespace: teste-quota
  labels:
    app: teste-quota
    version: 0.0.1
    backstage.io/kubernetes-id: teste-quota
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - teste-quota.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: teste-quota-svc
      weight: 100
